Simplify the way dezoomers are handled
This should make it easier to add new dezoomers

--- a/style.css
+++ b/style.css
@@ -55,8 +55,10 @@ input#url:focus {
 	box-shadow:0 0 10px #aaf;
 }
 
-.dezoomifiers label {
+#dezoomers label {
 	margin-right:20px;
+	white-space: nowrap;
+	font-size:.9em;
 }
 input[type=submit] {
 	width:30%;
