--- a/style.css
+++ b/style.css
@@ -3,6 +3,8 @@ html, body {
 	padding:0;
 	width:100%;
 	background-color:#fff9f9;
+	font-family: Verdana, sans-serif;
+	font-size: 15px;
 }
 
 #status {
@@ -127,16 +129,18 @@ input#url:focus {
 }
 
 .error {
-	margin-top:15px;
-	margin-left:30px;
-	margin-right:30px;
-	text-align:justify;
 	background-color:#ffc4c4;
-	color:black;
 	padding-left:7px;
 	padding-right:7px;
-	border-radius: 5px;
-	border: 2px solid red;
+	border: 1px solid red;
+	word-wrap: break-word;
+	margin: 15px 0px;
+}
+
+#errormsg {
+  font-family: monospace;
+  white-space: pre-wrap;
+  font-size: 1.3em;
 }
 
 .error > h3 {
